example-6-istio/bk_sidecar/envoy-filter_ll.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: xll
  namespace: ll
spec:
  configPatches:
  - applyTo: NETWORK_FILTER
    match:
      context: ANY
      listener:
        filterChain:
          filter:
            name: "envoy.http_connection_manager"
    patch:
      operation: INSERT_BEFORE
      value:
        config:
          inlineCode: |
            function envoy_on_request(request_handle)
              request_handle:logInfo("******* enter envoy_on_request ef-ll")
              request_handle:headers():replace("tenant_id","ll")
            end
