example-6-istio/bk_sidecar/envoy-filter_vr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: xff
  namespace: vr
spec:
  configPatches:
  - applyTo: NETWORK_FILTER
    match:
      context: ANY
      listener:
        filterChain:
          filter:
            name: "envoy.http_connection_manager"
    patch:
      operation: MERGE
      value:
        config:
          inlineCode: |
            function envoy_on_request(request_handle)
              request_handle:logInfo("******* enter envoy_on_request ef-vr")
              request_handle:headers():replace("tenant_id","vr")
            end
